--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@tanstack/react-query-devtools": "^5.52.0",
     "chart.js": "^4.4.4",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "next": "14.2.6",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-calendar-timeline": "^0.28.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/navermaps": "^3.7.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-calendar-timeline": "^0.28.6",
