--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-query-devtools": "^5.52.0",
     "chart.js": "^4.4.4",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-calendar-timeline": "^0.28.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
   },
@@ -27,7 +27,6 @@
     "@types/navermaps": "^3.7.5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-calendar-timeline": "^0.28.6",
     "@types/react-dom": "^18",
     "typescript": "^5"
   }
